# hangman-rust

./: Cargo.toml  README.md
.github/workflows/: build_and_test.yaml
src/: feature_checks.rs  game.rs  main.rs  ratatui_game_runner.rs  stdio_game_runner.rs
src/game/: allowed_letters.rs  guesses.rs  words.rs  words.txt
src/ratatui_game_runner/: app.rs  event_handler.rs  tui.rs  ui.rs  update.rs
src/ratatui_game_runner/ui/: game_complete.rs  game_in_progress.rs  shared.rs
