[package]
name = "hangman"
version = "0.1.0"
edition = "2021"

[features]
default = ["ratatui_game_runner"]
stdio_game_runner = ["colored"]
ratatui_game_runner = ["ratatui", "crossterm", "anyhow"]

[dependencies]
anyhow = { version = "1.0.75", optional = true }
colored = { version = "2.0.4", optional = true }
crossterm = { version = "0.27.0", optional = true }
rand = "0.8.5"
ratatui = { version = "0.23.0", optional = true }
